# polymarket-signal-bot

./: .gitignore  PROJECT_STATUS.md  README.md  START_POLYSIGNAL.bat  STOP_POLYSIGNAL.bat  TRAINING_LOGIC_REVIEW.md  dashboard.py  pyproject.toml  requirements-server.txt  requirements-streamlit.txt
crypto-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
crypto-dashboard/src/: App.jsx
crypto-dashboard/src/components/: ConsensusVotes.jsx  DashboardLayout.jsx  EquityChart.jsx  IndexerMetrics.jsx  LiveWebSocket.jsx  OrderBookDepth.jsx  PaperTradingControl.jsx  PositionsTable.jsx  SystemControl.jsx  TradeLog.jsx  WalletCohorts.jsx
crypto-dashboard/src/hooks/: useApi.js  useInterval.js  useWebSocket.js
crypto-dashboard/src/styles/: index.css
crypto-dashboard/src/utils/: format.js
docs/: learning_model.md
polymarket_signal_bot/: __init__.py  alerts.py  analytics.py  api.py  auto_trainer.py  backtest.py  bulk_sync.py  cli.py  cohorts.py  consensus_engine.py  dashboard.py  demo.py  dune_fetcher.py  features.py  indexer.py  learning.py  live_paper_runner.py  market_flow.py  models.py  monitor.py  paper.py  policy_optimizer.py  scoring.py  signals.py  storage.py  streaming.py  taxonomy.py
polymarket_signal_bot/web/: app.js  index.html  styles.css
scripts/: install_autostart.ps1  install_maintenance_task.ps1  maintenance.py  maintenance_cycle.ps1  start_polysignal.ps1  stop_polysignal.ps1  uninstall_autostart.ps1  uninstall_maintenance_task.ps1
server/: __init__.py  api.py
src/: __init__.py  auto_trainer.py  consensus_engine.py  dune_fetcher.py  indexer.py
tests/: test_alerts_monitor.py  test_analytics.py  test_auto_trainer.py  test_bulk_sync.py  test_cohorts.py  test_dashboard.py  test_dune_fetcher.py  test_features.py  test_indexer.py  test_learning.py  test_live_paper_runner.py  test_market_backtest.py  test_market_flow.py  test_policy_optimizer.py  test_reviews.py  test_scoring_signals.py  test_server_api.py  test_src_compat.py  test_streaming.py  test_streamlit_dashboard_indexer.py  test_taxonomy_noise.py  test_watchlist.py
