[project]
name = "polymarket-signal-bot"
version = "0.1.0"
description = "Polymarket wallet-following signal engine with paper trading only."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Local Codex" }]
dependencies = []

[project.optional-dependencies]
analytics = ["duckdb>=1.0"]
stream = ["websockets>=12.0"]
all = ["duckdb>=1.0", "websockets>=12.0"]

[project.scripts]
polysignal = "polymarket_signal_bot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
