[project]
name = "polymarket-signal-bot"
version = "0.1.0"
description = "Polymarket wallet-following signal engine with paper trading only."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Local Codex" }]
dependencies = []

[project.optional-dependencies]
analytics = ["duckdb>=1.0"]
stream = ["websockets>=12.0"]
indexer = ["httpx>=0.27", "eth-hash[pycryptodome]>=0.7", "clickhouse-driver>=0.2"]
dune = ["httpx>=0.27", "python-dotenv>=1.0"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "python-dotenv>=1.0", "wsproto>=1.2", "web3>=6.20"]
training = ["joblib>=1.3", "scikit-learn>=1.4"]
all = [
    "duckdb>=1.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "eth-hash[pycryptodome]>=0.7",
    "clickhouse-driver>=0.2",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "wsproto>=1.2",
    "joblib>=1.3",
    "scikit-learn>=1.4",
    "web3>=6.20",
]

[project.scripts]
polysignal = "polymarket_signal_bot.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
